# resume-match

./: .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: __init__.py  config.py  database.py  main.py
apps/backend/app/prompts/: __init__.py  templates.py
apps/backend/app/routers/: __init__.py  auth.py  config.py  generate.py  health.py  jobs.py  resumes.py  score.py
apps/backend/app/schemas/: __init__.py  models.py
apps/backend/app/services/: ats_scorer.py  generator.py  improver.py  job_label.py  normalizer.py  parser.py
apps/frontend/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx
apps/frontend/app/(auth)/login/: page.tsx
apps/frontend/app/(default)/: layout.tsx
apps/frontend/app/(default)/dashboard/: page.tsx
apps/frontend/app/(default)/generate/: page.tsx
apps/frontend/components/ats/: ats-score-panel.tsx  keyword-chips.tsx  score-factors.tsx  score-ring.tsx
apps/frontend/components/auth/: logout-button.tsx
apps/frontend/components/builder/: resume-builder.tsx
apps/frontend/components/dashboard/: resume-card.tsx
apps/frontend/components/generate/: generate-wizard.tsx  step-jd.tsx  step-review.tsx  step-upload.tsx
apps/frontend/components/home/: hero.tsx
apps/frontend/components/resume/: editable-resume-label.tsx  resume-renderer.tsx
apps/frontend/components/ui/: button.tsx
apps/frontend/lib/: types.ts  utils.ts
apps/frontend/lib/api/: client.ts
docker/: start.sh
(+3 files in other folders)
